Updated home page

--- a/views/includes/home.ejs
+++ b/views/includes/home.ejs
@@ -91,7 +91,7 @@ learn and inspire.
         <li>Analytics & Insights</li>
         <li>Reward Distribution</li>
       </ul>
-      <button class="institute-btn" onclick="window.location.href='/isignup'">Institute Login</button>
+      <button class="institute-btn" onclick="window.location.href='/ilogin'">Institute Login</button>
     </div>
 
     <div class="card lecturer">
@@ -106,7 +106,7 @@ learn and inspire.
         <li>Feedback Analysis</li>
         <li>Issue Certificates</li>
       </ul>
-      <button class="lecturer-btn" onclick="window.location.href='/lsignup'">Lecturer Login</button>
+      <button class="lecturer-btn" onclick="window.location.href='/llogin'">Lecturer Login</button>
     </div>
 
     <div class="card student">
@@ -121,7 +121,7 @@ learn and inspire.
         <li>Submit Feedback</li>
         <li>Earn Rewards & Badges</li>
       </ul>
-      <button class="student-btn" onclick="window.location.href='/ssignup'">Student Login</button>
+      <button class="student-btn" onclick="window.location.href='/slogin'">Student Login</button>
     </div>
   </div>
 </section>
