--- a/views/users/lecturer-login.ejs
+++ b/views/users/lecturer-login.ejs
@@ -15,7 +15,7 @@
       <p>Welcome back! Sign in to Guidion</p>
     </div>
 
-    <form action="/lecturer/login" method="POST">
+    <form action="/login" method="POST">
       <label>Email Address</label>
       <input type="email" name="email" placeholder="lecturer@university.edu" required>
       
@@ -25,7 +25,7 @@
       <a href="#" style="float:right; font-size: 13px;">Forgot Password?</a>
       <button type="submit">Sign In</button>
 
-      <p>Don't have an account? <a href="/lecturer/signup">Sign up here</a></p>
+      <p>Don't have an account? <a href="/lsignup">Sign up here</a></p>
     </form>
   </div>
 </body>
