--- a/views/users/student-login.ejs
+++ b/views/users/student-login.ejs
@@ -14,7 +14,7 @@
       <p>Welcome back! Sign in to Guidion</p>
     </div>
 
-    <form action="/student/login" method="POST">
+    <form action="/login" method="POST">
       <label>Email Address</label>
       <input type="email" name="email" placeholder="student@university.edu" required>
       
@@ -24,8 +24,9 @@
       <a href="#" style="float:right; font-size: 13px;">Forgot Password?</a>
       <button type="submit">Sign In</button>
 
-      <p>Don't have an account? <a href="/student/signup">Sign up here</a></p>
+      <p>Don't have an account? <a href="/ssignup">Sign up here</a></p>
     </form>
   </div>
 </body>
 </html>
+
