--- a/views/users/inst_signup.ejs
+++ b/views/users/inst_signup.ejs
@@ -69,7 +69,7 @@
             <div class="text-center mt-3 mb-0">
                 <a href="/" class="btn btn-outline-success me-2">Back to Home</a>
                 <span>Already have an account?</span>
-                <a href="/institute/login" class="text-decoration-none fw-semibold text-gradient"> Sign in here</a>
+                <a href="/ilogin" class="text-decoration-none fw-semibold text-gradient"> Sign in here</a>
             </div>
         </form>
     </div>
