--- a/views/users/institute-login.ejs
+++ b/views/users/institute-login.ejs
@@ -14,7 +14,7 @@
       <p>Welcome back! Sign in to Guidion</p>
     </div>
 
-    <form action="/institute/login" method="POST">
+    <form action="/login" method="POST">
       <label>Email Address</label>
       <input type="email" name="email" placeholder="admin@institute.edu" required>
       
@@ -24,7 +24,7 @@
       <a href="#" style="float:right; font-size: 13px;">Forgot Password?</a>
       <button type="submit">Sign In</button>
 
-      <p>Don't have an account? <a href="/institute/signup">Sign up here</a></p>
+      <p>Don't have an account? <a href="/isignup">Sign up here</a></p>
     </form>
   </div>
 </body>
