--- a/views/users/lec_signup.ejs
+++ b/views/users/lec_signup.ejs
@@ -62,7 +62,7 @@
             </div>
 
             <p class="text-center mt-3 mb-0">
-                Already have an account? <a href="/lecturer/login" class="text-decoration-none fw-semibold text-gradient">Sign in here</a>
+                Already have an account? <a href="/llogin" class="text-decoration-none fw-semibold text-gradient">Sign in here</a>
             </p>
         </form>
     </div>
