--- a/views/users/stud_signup.ejs
+++ b/views/users/stud_signup.ejs
@@ -64,7 +64,7 @@
             </div>
 
             <p class="text-center mt-3 mb-0">
-                Already have an account? <a href="/login" class="text-decoration-none fw-semibold text-gradient">Sign in here</a>
+                Already have an account? <a href="/slogin" class="text-decoration-none fw-semibold text-gradient">Sign in here</a>
             </p>
         </form>
     </div>
