--- a/views/includes/home.ejs
+++ b/views/includes/home.ejs
@@ -22,7 +22,7 @@
     <ul class="nav-links">
       <li><a href="#feature-section">Features</a></li>
       <li><a href="#how-it-works">How It Works</a></li>
-      <li><a href="about-us">About Us</a></li>
+      <li><a href="/about">About Us</a></li>
     </ul>
     <div class="nav-buttons">
       <a href="#cards" class="signin">Sign In</a>
