--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -16,7 +16,7 @@
     <!-- Top logo and institute info -->
     <div class="institute-info">
       <i class="fa-solid fa-pen edit-btn"></i>
-      <img src="logo.jpeg" alt="Institute Logo" class="institute-logo">
+      <img src="logo_in.jpg" alt="Institute Logo" class="institute-logo">
       <h2 class="institute-name">Indira College Of Commerce and Science Unity Campus Pune</h2>
       <p class="institute-desc">Institute of Advanced Learning and Research</p>
     </div>
