--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -51,7 +51,7 @@
 
       <!-- Bottom -->
       <div class="footer-bottom">
-        <p>&copy; Guidion. All rights reserved.</p>
+        <p>&copy; 2025 Guidion. All rights reserved.</p>
         <div class="footer-links">
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Service</a>
