--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -6,11 +6,16 @@
         </button>
         <div class="collapse navbar-collapse main" id="navbarNavAltMarkup">
             <div class="navbar-nav nav-left">
+        
                 <a class="nav-link " href="/home">GUIDION</a>
 
             </div>
+           <button class="btn btn-outline-primary btn-sm">Home</button>
             </div>
+             
             <div class="navbar-nav ms-auto nav-right">
+                
+        
                     <a class="nav-link" href="/signup">Signup</a>
                     <a class="nav-link" href="/login">Login</a>
                     <a class="nav-link" href="/logout">Logout</a>
