--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/rewards.css">
+     <link rel="stylesheet" href="/css/Lect_detail.css">
     <link rel="stylesheet" href="/css/sidebar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
