--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="/css/rewards.css">
      <link rel="stylesheet" href="/css/Lect_detail.css">
     <link rel="stylesheet" href="/css/sidebar.css">
+     <link rel="stylesheet" href="/css/stud_detail.css">
+        
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
