--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -127,8 +127,8 @@ body {
 }
 
 /* Main content */
-.main-content {
+/* .main-content {
   margin-left: 260px;
   padding: 40px;
   flex-grow: 1;
-}
+} */
