--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -25,7 +25,7 @@
 
 <body>
     
-    <div class="full-page-grid">
+    <!-- <div class="full-page-grid"> -->
         
         <div class="sidebar-column">
             <%- include('../includes/sidebar') %>
@@ -47,7 +47,7 @@
             
         </div>
         
-    </div>
+    <!-- </div> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
                 crossorigin="anonymous"></script>
