reward page updated

--- a/public/css/institute/rewards.css
+++ b/public/css/institute/rewards.css
@@ -20,7 +20,7 @@ body {
 }
 
 .title {
-  color: #007bff;
+  color: #000;
   font-weight: 600;
 }
 
@@ -63,11 +63,6 @@ body {
   color: #555;
 }
 
-/* Card Colors */
-.col .yellow { background-color: #e7d8a0; }
-.col .purple { background-color: #a67dcc; }
-.col .green  { background-color: #80d58d; }
-.col .blue   { background-color: #90aad4; }
 
 /* Section Cards */
 .card-section {
