--- a/views/dashboards/institute/stud_detail.ejs
+++ b/views/dashboards/institute/stud_detail.ejs
@@ -24,25 +24,25 @@
       <div class="stats-grid">
         <a href="/students" class="card purple">
           <div class="icon"><i class="fa-solid fa-user-graduate"></i></div>
-          <h3><%= totalStudents || '1,250' %></h3>
+          <h3> totalStudents || '1,250' </h3>
           <p>Total Students</p>
         </a>
 
         <a href="/attendance" class="card blue">
           <div class="icon"><i class="fa-solid fa-chart-line"></i></div>
-          <h3><%= attendance || '89.5%' %></h3>
+          <h3>attendance || '89.5%' </h3>
           <p>Attendance</p>
         </a>
 
         <a href="/rewards" class="card green">
           <div class="icon"><i class="fa-solid fa-award"></i></div>
-          <h3><%= rewards || '9.23' %></h3>
+          <h3>rewards || '9.23' </h3>
           <p>Student Rewards</p>
         </a>
 
         <a href="/topicpoll" class="card yellow">
           <div class="icon"><i class="fa-solid fa-comments"></i></div>
-          <h3><%= topicPolls || '30' %></h3>
+          <h3>topicPolls || '30' </h3>
           <p>Topic Polls</p>
         </a>
       </div>
