--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,15 +10,15 @@
                 <a class="nav-link " href="/home">GUIDION</a>
 
             </div>
-           <button class="btn btn-outline-primary btn-sm">Home</button>
+           
             </div>
-             
+             <button class="btn btn-outline-primary btn-sm">Home</button>
             <div class="navbar-nav ms-auto nav-right">
-                
         
-                    <a class="nav-link" href="/signup">Signup</a>
+                <button onclick="window.location.href='/help'" ><i class="fa-solid fa-question"></i></button>
+                    <!-- <a class="nav-link" href="/signup">Signup</a>
                     <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a> -->
               </div>
         </div>
     </div>  
