--- a/views/dashboards/institute/topicpoll.ejs
+++ b/views/dashboards/institute/topicpoll.ejs
@@ -5,6 +5,19 @@
       <h1><i class="fa-solid fa-comments"></i> Topic Polls</h1>
       <a href="/GUIDION_/views/dashboards/institute/studdetail.ejs" class="back-btn"><i class="fa-solid fa-arrow-left"></i> Back</a>
     </header>
+<% const topics = [
+  "Artificial Intelligence and Machine Learning",
+  "Cybersecurity and Data Privacy",
+  "Blockchain Technology",
+  "Web Development Trends",
+  "Cloud Computing and DevOps",
+  "Internet of Things (IoT)",
+  "UI/UX Design Principles",
+  "Digital Marketing Strategies",
+  "Entrepreneurship and Startups",
+  "Sustainable Technology Innovations"
+];
+%>
 
     <section class="polls">
       <h2>Select the Topics You’re Interested In</h2>
