institute's lecturer page updated

--- a/public/css/institute/rewards.css
+++ b/public/css/institute/rewards.css
@@ -10,7 +10,10 @@ body {
 .container {
   max-width: 1200px;
   margin: auto;
-  overflow: scroll;
+
+}
+.main-content {
+  margin-top: 60px!important;
 }
 
 .header-section {
