--- a/public/css/institute/Lect_detail.css
+++ b/public/css/institute/Lect_detail.css
@@ -47,13 +47,16 @@ html, body {
   grid-template-columns: repeat(4, 1fr);
   gap: 1.5rem;
   margin-bottom: 2rem;
+  
 }
+
 
 .stat-card {
   background: #fff;
+  border: 1px solid #d5cdcd;
   padding: 1.5rem;
   border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 6px rgba(165, 163, 163, 0.05);  
   text-align: center;
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
