--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -23,10 +23,10 @@
 
     <!-- Menu items -->
     <nav class="menu">
-      <a href="#" class="active"><i class="ri-calendar-line"></i> Schedule</a>
-      <a href="#"><i class="ri-user-3-line"></i> Lecturer Details</a>
-      <a href="#"><i class="ri-graduation-cap-line"></i> Students Details</a>
-      <a href="#"><i class="ri-bar-chart-2-line"></i> Analytics</a>
+      <a href="/schedule" class="active"><i class="ri-calendar-line"></i> Schedule</a>
+      <a href="/lect-detail"><i class="ri-user-3-line"></i> Lecturer Details</a>
+      <a href="/stud_detail"><i class="ri-graduation-cap-line"></i> Students Details</a>
+      <a href="/analytics"><i class="ri-bar-chart-2-line"></i> Analytics</a>
       <a href="/reward"><i class="ri-award-line"></i> Rewards</a>
     </nav>
 
