--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,12 +10,11 @@
                 <a class="nav-link " href="/home">GUIDION</a>
 
             </div>
-           
             </div>
              <button class="btn btn-outline-primary btn-sm">Home</button>
             <div class="navbar-nav ms-auto nav-right">
         
-                <button onclick="window.location.href='/help'" ><i class="fa-solid fa-question"></i></button>
+                <button onclick="window.location.href='/help'" class="help"><i class="fa-solid fa-question"></i></button>
                     <!-- <a class="nav-link" href="/signup">Signup</a>
                     <a class="nav-link" href="/login">Login</a>
                     <a class="nav-link" href="/logout">Logout</a> -->
