schedule page updated

--- a/views/dashboards/institute/lect_detail.ejs
+++ b/views/dashboards/institute/lect_detail.ejs
@@ -1,6 +1,6 @@
 
 <% layout('/layouts/dashboard') %>
-
+<link rel="stylesheet" href="/css/institute/Lect_detail.css">
 <div class="main-container">
   <%- include('../../includes/sidebar') %>
 
