--- a/views/dashboards/institute/reward.ejs
+++ b/views/dashboards/institute/reward.ejs
@@ -1,5 +1,5 @@
 <% layout("/layouts/dashboard.ejs") %>
-
+    <link rel="stylesheet" href="/css/institute/rewards.css">
 <%
   const stats = [
     { color: "yellow", icon: "🏅", value: "12,450", label: "Total Tokens Issued" },
