--- a/public/css/institute/schedule.css
+++ b/public/css/institute/schedule.css
@@ -88,7 +88,9 @@ body {
 .filter-btn:hover {
   background: #f1f1f1;
 }
-
+.main-content {
+    margin-left: 0 !important;
+}
 /* ===== Table Section ===== */
 .schedule-table {
   background: #fff;
