--- a/views/dashboards/institute/schedule.ejs
+++ b/views/dashboards/institute/schedule.ejs
@@ -8,7 +8,7 @@
   <title>Schedule - EduConnect+</title>
 
   <!-- point to your CSS file (or change to /css/schedule.css if needed) -->
-  <link rel="stylesheet" href="/css/schedule.css" />
+  <link rel="stylesheet" href="/css/institute/schedule.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
