--- a/views/dashboards/institute/stud_detail.ejs
+++ b/views/dashboards/institute/stud_detail.ejs
@@ -40,7 +40,7 @@
         <a href="/stud_topicpoll" class="card yellow">
           <div class="icon"><i class="fa-solid fa-comments"></i></div>
           <h3><%= typeof polls !== 'undefined' ? polls : '30' %></h3>
-          <p>Topic Polls</p>
+          <p>Polls</p>
         </a>
       </div>
 
@@ -55,24 +55,24 @@
             <tr>
               <th>Complaint ID </th>
               <th>Complaint Details</th>
-              <th>Status</th>
+              <th>Attendance</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>#A45F7C</td>
               <td>Guest lecturer was not available on scheduled time.</td>
-              <td>Resolved</td>
+              <td>90 %</td>
             </tr>
             <tr>
               <td>#B87D2E</td>
               <td>Classroom projector not working properly.</td>
-              <td>Pending</td>
+              <td>80%</td>
             </tr>
             <tr>
               <td>#B87AF3E</td>
               <td>Topic not understand.</td>
-              <td>Pending</td>
+              <td>65%</td>
             </tr>
           </tbody>
         </table>
